Fix bug in wraps

--- a/stylesheets/_helpers.flex.scss
+++ b/stylesheets/_helpers.flex.scss
@@ -2,6 +2,7 @@
 // ------------------------------------------------------------------------------------ */
 .flex { display: flex; }
 .iflex { display: inline-flex; }
+.flex-grow { flex-grow: 1 }
 
 // Flex Basis Helpers
 //-------------------------------------------------------------------------- */
