--- a/stylesheets/_helpers.grid.scss
+++ b/stylesheets/_helpers.grid.scss
@@ -3,7 +3,7 @@
 .wrap {
     max-width: 1140px;
     margin-left: auto;
-    margin-left: auto;
+    margin-right: auto;
 }
 
 .wrap--pad {
